# lidar

high_reflectivity_detection/: CMakeLists.txt  package.xml
high_reflectivity_detection/msg/: DetectionResult.msg
high_reflectivity_detection/scripts/: high_reflectivity_detection_node.py  multi_high_reflectivity_detection_node.py  multi_high_reflectivity_detection_node_t.py  re_high_reflectivity_detection_node.py
pvesti/: CMakeLists.txt  package.xml
pvesti/msg/: UAVPosVel.msg  UAVPose.msg
pvesti/scripts/: lidar2orca_ros.py  lidar2orca_ros_absolute.py  testpub.py
scripts/: multi_high_reflectivity_detection_node.py
